# gnochi

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_inference.py
assets/smpl/: README.md
assets/weights/: README.md  capfix.torch  cvae.torch
examples/: README.md  id_dance14_frame000075.json  id_fight16_frame000010.json  id_piggyback17_frame000103.json  id_sidehug37_frame000029.json  id_talk22_frame000037.json  ood_breakdance2_frame000004.json  ood_cumbia_frame000000.json  ood_hiphop_frame000002.json  ood_swingkettleball_frame000002.json  ood_taunt_frame000000.json
gnochi/: __init__.py  infer.py  io.py  model.py  numpy_compat.py  pose_utils.py
