[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gnochi-inference"
version = "0.1.0"
description = "Minimal GNOCHI inference package for generating interacting SMPL poses."
requires-python = ">=3.9"

[project.scripts]
gnochi-infer = "gnochi.infer:main"

[tool.setuptools.packages.find]
include = ["gnochi*"]
